gen/oslogin/v1beta/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-oslogin1_beta v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/oslogin/v1beta/lib)
error[E0423]: expected value, found struct `projects::ProjectsActions`
   --> gen/oslogin/v1beta/lib/src/lib.rs:400:13
    |
400 |             projects::ProjectsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `projects::ProjectsActions { /* fields */ }`?

error[E0423]: expected value, found struct `ssh_public_keys::SshPublicKeysActions`
   --> gen/oslogin/v1beta/lib/src/lib.rs:404:13
    |
404 |             ssh_public_keys::SshPublicKeysActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `ssh_public_keys::SshPublicKeysActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-oslogin1_beta`.

To learn more, run the command again with --verbose.
